# chatbot_ui

./: .gitignore  README.md  package-lock.json  pyproject.toml
back_end/: main.py
back_end/routes/: ui.py
front_end/static/css/: content_box.css  layout.css
front_end/static/js/: script.js
front_end/templates/: index.html
front_end/templates/components/: chat_history.html  content.html
notebooks/: ollama llama_index basic.html  ollama llama_index basic.ipynb  ollama llama_index chatmemory buffer part 2.ipynb.ipynb  ollama llama_index chatmemory buffer.ipynb  ollama llama_index thinking.html  ollama llama_index thinking.ipynb  self discover low level.ipynb  self discover recent.html  self discover workflow.ipynb  self discover.html  wip chatbot.ipynb  wip squad dataset loader.ipynb
scripts/: data_loader.py  local_embeddings_server.py
src/: chat_engines.py  embedding_client.py  llm.py
